--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exam",
+  "name": "echarts-analysis-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "countup.js": "^2.0.5",
+    "echarts": "^4.7.0",
+    "vue": "^2.6.11",
+    "vue-countup-v2": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
